# translator

./: README.md  evaluate.py  main.py  pyproject.toml  sacrebleu_scores.csv  sacrebleu_summary.csv
