[project]
name = "translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.13.0",
    "langdetect>=1.0.9",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "transformers==4.47.1",
]
